# Akasha

./: .coverage  .env  .env.example  .env.production.template  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  JINA_V4_IMPLEMENTATION.md  MODEL_STORAGE_LOCATIONS.md  PHASE2_ANALYSIS.md  PHASE2_FINAL_STATUS.md  PHASE3_IMPLEMENTATION_PLAN.md  README.md  SYSTEM_STATUS_DISCOVERY.md  docker-compose.prod.yml  docker-compose.yml  final_phase_validation_report.json  phase_1234_comprehensive_test_report.json  pyproject.toml  simple_jina_test.py  test_chunking_debug.py  test_comprehensive_phases.py  test_e2e_rag_pipeline.py  test_jina_integration.py  test_jina_v4.py  test_phase2_complete.py  test_phase2_comprehensive.py  test_phase2_edge_cases.py  test_phase2_pdf.py  test_phase2_performance.py  test_phase2_rag_complete.py  test_phase3_retrieval.py  test_phases_1234_comprehensive.py  test_phases_final_validation.py  test_rag_pipeline.py  test_real_embeddings.py  vision.md
config/: akasha.yaml
docker/: entrypoint-prod.sh
docs/: API_SPECIFICATION.md  COMPONENT_SPECIFICATIONS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  PLUGIN_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
frontend/: Dockerfile.prod  package-lock.json  package.json
frontend/docker/: default.conf  nginx.conf
frontend/src/: App.tsx
frontend/src/components/: index.ts
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Search.tsx  Settings.tsx
frontend/src/services/: api.ts  authService.ts
frontend/src/store/: appStore.ts  authStore.ts
frontend/src/styles/: theme.ts
frontend/src/types/: api.ts  app.ts
scripts/: dev.py  setup.py
scripts/deployment/: deploy.sh  manage.sh
src/akasha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/api/: auth.py  document_management.py  main.py  middleware.py
src/core/: config.py  exceptions.py  job_queue.py  logging.py
src/llm/: __init__.py  config.py  manager.py  provider.py  templates.py
src/plugins/: base.py  manager.py  registry.py
src/rag/: __init__.py  cross_encoder.py  embeddings.py  hybrid_search.py  ingestion.py  pipeline.py  query_expansion.py  retrieval.py  storage.py
test_chroma_db/: chroma.sqlite3
test_concurrent_db/: chroma.sqlite3
test_e2e_db/: chroma.sqlite3
test_pdf_rag_db/: chroma.sqlite3
test_performance_db/23842cd6-4e31-420e-b948-e753c8a34171/: index_metadata.pickle
test_phase3_db/: chroma.sqlite3
test_rag_db/: chroma.sqlite3
tests/: conftest.py  test_api.py  test_config.py  test_plugins.py
tests/rag/: __init__.py  test_embeddings.py  test_ingestion.py  test_pipeline.py  test_storage.py
